# Rosseland-Mean-Opacity

./: .gitignore  LICENSE  README.md  REPRODUCIBILITY.md  pyproject.toml
scripts/: ablation.py  cap_sweep.py  compare_lanl.py  diag_poutanen2017.py  diag_poutanen2017_extended.py  plot_spectra.py  run_grid.py  slides_highT_p17_diagnostic.py
src/hydrogen_opacity/: __init__.py  bound_free_h.py  bound_free_hminus.py  config.py  constants.py  driver.py  eos.py  free_free.py  free_free_hminus.py  gaunt.py  grids.py  io_utils.py  opacity.py  rosseland.py  scattering.py  state.py  validation.py
tests/: test_constants.py  test_eos.py  test_opacity_components.py  test_poutanen2017.py  test_regression.py  test_rosseland.py
